@@ -1,5 +1,8 @@
 2009-02-21  Badlop  <badlop@process-one.net>
 
+ 	* doc/guide.tex: mod_muc can run in several nodes of cluster
+ 	* doc/guide.html: Likewise
+
  	* src/odbc/mysql.sql: Fix complain about comment syntax
  	* src/odbc/pg.sql: Likewise
 
